2009-07-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical_support/intrcritical.c,
	spintrcritical_support/intrcritical.h: Change prototype of delay
	method to indicate when counter is reset. This can be used to count
	how many iterations we are doing.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add sp60 to exercise case where a task is
	blocked on one period while another expires. Add sp61 which exercises
	the case where a call is made to rtems_shutdown_executive when the
	system is not up.
	* sp60/.cvsignore, sp60/Makefile.am, sp60/init.c, sp60/sp60.doc,
	sp60/sp60.scn, sp61/.cvsignore, sp61/Makefile.am, sp61/init.c,
	sp61/sp61.doc, sp61/sp61.scn: New files.

2009-07-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/init.c: To be timesliced, tasks must also me preemptible.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal03/spfatal03.scn, spfatal03/testcase.h: Fix spfatal03 to do
	what it was intended to do.

2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical_support/intrcritical.c,
	spintrcritical_support/intrcritical.h: New files.

2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new infrastructure which is more
	reliable about generating cases which hit interrupt critical
	sections. Remove sp41 since it used its own mechanism.
	* spintrcritical01/.cvsignore, spintrcritical01/Makefile.am,
	spintrcritical01/init.c, spintrcritical01/spintrcritical01.doc,
	spintrcritical01/spintrcritical01.scn, spintrcritical02/.cvsignore,
	spintrcritical02/Makefile.am, spintrcritical02/spintrcritical02.doc,
	spintrcritical02/spintrcritical02.scn, spintrcritical03/.cvsignore,
	spintrcritical03/Makefile.am, spintrcritical03/spintrcritical03.doc,
	spintrcritical03/spintrcritical03.scn, spintrcritical04/.cvsignore,
	spintrcritical04/Makefile.am, spintrcritical04/spintrcritical04.doc,
	spintrcritical04/spintrcritical04.scn, spintrcritical05/.cvsignore,