@@ -103,6 +103,7 @@ spintrcritical02/Makefile
 spintrcritical03/Makefile
 spintrcritical04/Makefile
 spintrcritical05/Makefile
+spintrcritical06/Makefile
 spobjgetnext/Makefile
 spprintk/Makefile
 spsize/Makefile
