@@ -1,0 +1,31 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  spintrcritical06
+
+directives:
+
+  _Thread_queue_Enqueue_priority
+    - interrupt synchronization
+  rtems_task_restart
+  _Thread_queue_Extract_priority
+
+concepts:
+
++ Ensure that removing the "search task" from the thread queue while we
+  are looping and enqueuing another works as expected.  This case is where
+  the TCB we are using as a current pointer is removed from the thread queue
+  when we flash interrupts WHILE SEARCHING FORWARD.
+
+NOTE: There is no way to know this case is hit from a test perspective.  The
+      test just runs and we check the coverage report.
